# Quaternion

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  tox.ini
.github/workflows/: publish-python-package-wf.yml  tag_release_wf.yml  test-python-package-wf.yml
docs/quaternion/: index.html  quaternion.html
docs/quaternion/tests/: index.html  test_quaternion.html
docs/quaternion_djs/: index.html  quaternion.html
docs/quaternion_djs/tests/: index.html  test_quaternion.html
quaternion/: __init__.py  quaternion.py
quaternion/tests/: __init__.py  test_quaternion.py
quaternion_djs/: quaternion.py
