[tool.poetry]
name = "quaternion"
version = "0.1.0"
description = "A package for using quaternions"
authors = ["James Strudwick <James.Strudwick@ibm.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.3.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
