[tool.poetry]
name = "quaternion"
version = "0.0.1"
description = "A package for using quaternions"
authors = ["James Strudwick <James.Strudwick@ibm.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
tox = "^4.18.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.8.0"
pip-licenses = "^5.0.0"
pipdeptree = "^2.23.1"


[tool.poetry.group.docs.dependencies]
pdoc3 = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=quaternion/ --cov-config=.coveragerc --cov-report=xml"
testpaths = [
    "quaternion",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    envlist = py312,py311,py310

    [testenv]
    allowlist_externals = poetry
    commands =
        poetry install
        poetry run pytest
"""
